# clapshot

./: .gitignore  Dockerfile.demo  Dockerfile.easypanel  Dockerfile.server  FEATURES.md  Makefile  README.md  llms.txt
client/: Makefile  README.md  package-lock.json  package.json  vitest.config.ts
client/debian/: changelog
client/public/: clapshot_client.conf.json
client/src/: App.svelte  app.css  i18n.ts
client/src/__tests__/: CommentCard.test.ts  CommentInput.test.ts  FileUpload.test.ts  PopupMenu.test.ts  SubtitleCard.test.ts  VideoPlayer.test.ts  commentSorting.test.ts  i18n.test.ts  setup.ts
client/src/__tests__/integration/: CommentCard.ParentComponent.integration.test.ts  CommentInput.ParentHandler.integration.test.ts
client/src/__tests__/lib/asset_browser/: VideoTile.test.ts
client/src/__tests__/lib/player_view/: CommentTimelinePin.test.ts  VideoPlayer_CommentTimelinePin.integration.test.ts
client/src/__tests__/lib/player_view/video-decoder/: Html5VideoDecoder.test.ts  HybridVideoDecoder.test.ts  MediabunnyDecoder.test.ts
client/src/lib/: Avatar.svelte  NavBar.svelte  commentTree.ts  timecodeUtils.ts
client/src/lib/asset_browser/: FileUpload.svelte  FolderListing.svelte  FolderTile.svelte  VideoTile.svelte
client/src/lib/player_view/: CommentCard.svelte  CommentInput.svelte  CommentTimelinePin.svelte  SubtitleCard.svelte  VideoPlayer.svelte
client/src/lib/player_view/video-decoder/: Html5VideoDecoder.ts  HybridVideoDecoder.ts  MediabunnyDecoder.ts  timecode.ts  types.ts
client/src/lib/tools/: EDLImport.svelte
client/src/lib/tools/comment-export/: csv.ts  otio-notes.ts
doc/: TESTING_GUIDE.md  architecture-overview.md  connection-troubleshooting.md  development-setup.md  organizer-plugins.md  quick-start-reference.md  sysadmin-guide.md  transcoding.md  upgrading.md
organizer/basic_folders/: METAPLUGINS.md  Makefile  README.md  setup.py
organizer/basic_folders/debian/: changelog  rules
organizer/basic_folders/design-wip/: FOLDER_WARNING.txt
organizer/basic_folders/example_metaplugins/: README.md  calculate_sha256.py
organizer/basic_folders/organizer/: __init__.py  authz_methods.py  config.py  folder_op_methods.py  main.py  test_metaplugins.py  testing_methods.py  user_session_methods.py
organizer/basic_folders/organizer/helpers/: folders.py  pages.py  viewer_tracker.py
organizer/basic_folders/organizer/metaplugin/: __init__.py  loader.py  types.py
protobuf/libs/rust/: Cargo.toml  build.rs
protobuf/libs/rust/src/: lib.rs  subprocess.rs
protobuf/proto/: organizer.proto
server/: Cargo.toml  Makefile
server/debian/: changelog
server/debian/additional_files/: clapshot-server.conf  clapshot-transcode.conf
server/scripts/: clapshot-thumbnail  clapshot-transcode  clapshot-transcode-decision
server/src/: lib.rs  main.rs
server/src/api_server/: file_upload.rs  mod.rs  server_state.rs  tests.rs  user_session.rs
server/src/grpc/: grpc_client.rs  grpc_server.rs
server/src/tests/: integration_test.rs
server/src/tests/assets/: lettuce-av1.webm  lettuce-vp9.webm
server/src/video_pipeline/: ffmpeg_processor.rs  metadata_reader.rs  mod.rs  script_processor.rs
test/: docker-entry_htadmin.sh  docker-entry_no-auth.sh  run-cloudflare.sh
