[package]
name = "clapshot-server"
version = "0.9.2"
edition = "2021"

description = "Clapshot video/media review tool (backend)"
homepage = "https://github.com/elonen/clapshot"
license = "GPL-2.0"
readme = "README.md"


[package.metadata.deb]

maintainer = "Jarno Elonen <elonen@iki.fi>"
copyright = "2022-2024, Jarno Elonen <elonen@iki.fi>"
section = "unknown"
changelog = "debian/changelog"

depends = "$auto, python3, ffmpeg, mediainfo, logrotate, psmisc"

extended-description = """\
Clapshot is a web-based cooperative video review tool.
This package provides the backend server that communicates with clients
over websocket, processes video files and maintains a databases of them.
"""

assets = [
    ["target/release/clapshot-server", "usr/bin/", "755"],

    ["README.md", "usr/share/doc/clapshot-server/README", "644"],
    ["LICENSE", "usr/share/doc/clapshot-server/LICENSE.GPL2", "644"],
    ["debian/additional_files/clapshot-server.conf", "usr/share/doc/clapshot-server/examples/", "644"],
    ["debian/clapshot-server.logrotate", "etc/logrotate.d/clapshot-server", "644"],

    ["debian/additional_files/clapshot-server.conf", "etc/", "644"],
    ["debian/additional_files/run-with-conf.sh", "usr/share/clapshot-server/", "755"],
    
    # Transcoding, thumbnailing, and decision scripts
    ["scripts/clapshot-transcode", "usr/share/clapshot-server/scripts/", "755"],
    ["scripts/clapshot-thumbnail", "usr/share/clapshot-server/scripts/", "755"],
    ["scripts/clapshot-transcode-decision", "usr/share/clapshot-server/scripts/", "755"],
    
    # Configuration files
    ["debian/additional_files/clapshot-transcode.conf", "etc/", "644"],
]
conf-files = ["/etc/clapshot-server.conf", "/etc/clapshot-transcode.conf"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }


[[bin]]
name = "clapshot-server"
path = "src/main.rs"

[lib]
name = "clapshot_server"
path = "src/lib.rs"

[features]
default = ["include_slow_tests"]
include_slow_tests = []

[dependencies]
lib-clapshot-grpc = { path = "../protobuf/libs/rust" }

crossbeam-channel = "0.5.8"
clap = { version = "4.5.51", features = ["cargo", "derive", "wrap_help"] }
log = "0.4.17"
regex = "1.10.4"
signal-hook = "0.3.15"
tracing = "0.1.38"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json", "fmt", "std", "time", "local-time"] }
path-absolutize = "3.0.14"
serde_json = "1.0.145"
rust_decimal = "1.29.1"
threadpool = "1.8.1"
diesel = { version = "2.3.3", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
r2d2 = "0.8.10"
serde = "1.0.228"
diesel_migrations = "2.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
warp = { version = "0.4.2", features = ["websocket", "server"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.13"
data-url = "0.3.1"
base64 = "0.22.1"
async-std = "1.12.0"
sha2 = "0.10.6"
hex = "0.4.3"
mpart-async = "0.7.0"
bytes = "1.4.0"
futures-util = { version = "0.3.28" }
futures = "0.3.28"
mime = "0.3.17"
uuid = {version = "1.18.1", features=["v4"] }
file-owner = "0.1.1"
unix-named-pipe = "0.2.0"
num_cpus = "1.15.0"
urlencoding = "2.1.2"
rand = "0.9.1"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing-appender = "0.2.2"
timeago = "0.5.0"
tempfile = "3.23.0"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tower = { version = "0.5.2", features = ["util"] }
libc = "0.2.142"
semver = "1.0.27"
parking_lot = "0.12.1"
time = "0.3.44"
pbjson = "0.8"
pbjson-types = "0.8"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
portpicker = "0.1.1"
flate2 = "1.0.25"
tar = "0.4.40"
indoc = "2.0.5"
Inflector = "0.11.4"
serial_test = "3.1.1"
aspasia = "0.2.0"

[dev-dependencies]
assert_fs = "1.0.13"
tracing-test = {version="0.2.4", features=["no-env-filter"] }
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart", "stream"] }
url = "2.3.1"
tokio-test = "0.4.2"
mime = "0.3.17"
whoami = "1.6.1"
tokio-tungstenite = "0.28.0"

[build-dependencies]
tonic-prost-build = "0.14"
pbjson-build = "0.8"
