[package]
name = "lib-clapshot-grpc"
version = "0.8.5"
edition = "2021"

description = "Clapshot gRPC prototypes in Rust"
homepage = "https://github.com/elonen/clapshot"
license = "MIT"
readme = "README.md"


[lib]
name = "lib_clapshot_grpc"
path = "src/lib.rs"


[dependencies]
tracing = "0.1.38"
serde = "1.0.160"
warp = "0.3.4"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.13"
anyhow = "1.0.70"
tonic = "0.13.1"
prost = "0.13.5"
tonic-reflection = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
pbjson = "0.7.0"
pbjson-types = "0.7.0"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
libc = "0.2.142"
strip-ansi-escapes = "0.2.0"
wait-timeout = "0.2.0"
nix = "0.20.0"
mio = { version = "0.8.11", features = ["os-ext"] }
axum = "0.7"
axum-core = "0.4"

[build-dependencies]
tonic-build = "0.13.1"
pbjson-build = "0.7.0"
