[package]
name = "lib-clapshot-grpc"
version = "0.9.0"
edition = "2021"

description = "Clapshot gRPC prototypes in Rust"
homepage = "https://github.com/elonen/clapshot"
license = "MIT"
readme = "README.md"


[lib]
name = "lib_clapshot_grpc"
path = "src/lib.rs"


[dependencies]
tracing = "0.1"
serde = "1.0"
warp = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tower = { version = "0.5", features = ["util"] }
pbjson = "0.8"
pbjson-types = "0.8"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
libc = "0.2"
strip-ansi-escapes = "0.2"
wait-timeout = "0.2"
nix = { version = "0.30", features = ["signal", "process"] }
mio = { version = "1.0", features = ["os-ext"] }
axum = "0.8"
axum-core = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
pbjson-build = "0.8"
